<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ui">UI Test</string>
    <string name="uigo_name">UIGO - No-code, fast, accurate UI Test</string>
    <string name="local">Local</string>
    <string name="remote">Remote</string>
    <string name="record">record</string>
    <string name="replay">replay</string>
    <string name="recording">recording</string>
    <string name="replaying">replaying</string>
    <string name="name">Name:</string>
    <string name="please_firstly_record_or_replay">please firstly record or replay</string>
    <string name="finished_because_of_no_step">Finished because of no step</string>
    <string name="replay_finished">Replay finished</string>
    <string name="remains_step_needs_uploading">Here remains step needs uploading!</string>
    <string name="admin">Admin</string>
    <string name="click_ball_to_finish">Click ball to finish</string>
    <string name="long_press_ball_to_finish">Long press ball to finish</string>
    <string name="center">center</string>
    <string name="ratio">ratio</string>
    <string name="top">top</string>
    <string name="bottom">bottom</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="top_left">top left</string>
    <string name="top_right">top right</string>
    <string name="bottom_left">bottom left</string>
    <string name="bottom_right">bottom right</string>
    <string name="ratio_left">ratio left</string>
    <string name="ratio_right">ratio right</string>
    <string name="ratio_top">ratio top</string>
    <string name="ratio_bottom">ratio bottom</string>
    <string name="unselected_touch_scope">Unselected touch scope</string>
    <string name="selected_touch_scope_long_press_to_unselect">Selected touch scope, long press to unselect</string>
    <string name="click_sharp_to_double_ball_click_dollar_to_go_settings">Click # to double ball, click $ to go settings</string>
    <string name="no_more">no more</string>
    <string name="already_loaded_all">already loaded all</string>
    <string name="pls_input_name_here">Please input name here</string>
    <string name="temp_flow">Temp flow</string>
    <string name="confirm_delete">Confirm delete?</string>
    <string name="yes">Yes</string>
    <string name="pls_select_usable_item">Please select usable item</string>
    <string name="delete_succeed">Delete succeed</string>
    <string name="delete_failed">Delete failed, please check your network and retry</string>
    <string name="no">No</string>
    <string name="proxy_">Proxy:</string>
    <string name="http_proxy_">HTTP Proxy:</string>
    <string name="platform_proxy_">Platform Proxy:</string>
    <string name="account_">Account:</string>
    <string name="password_">Password:</string>
    <string name="platform_account_">Platform Account:</string>
    <string name="platform_password_">Platform Password:</string>
    <string name="app_account_">App Account:</string>
    <string name="app_password_">App Password:</string>
    <string name="id_">ID:</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>
    <string name="showing">Showing</string>
    <string name="hiding">Hiding</string>
    <string name="status_bar_">Status Bar</string>
    <string name="nav_bar_">Navigation Bar</string>
    <string name="app_name_">App Name</string>
    <string name="project_name">Project Name</string>
    <string name="disable">Disable</string>
    <string name="ignore">Ignore</string>
    <string name="skip">Skip</string>
    <string name="test_cases">Test Cases</string>
    <string name="enable">Enable</string>
</resources>
