<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlRoot"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uigo.x.UIAutoActivity"
    android:paddingTop="100dp"
    android:paddingBottom="50dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        >

        <TextView
            android:text="@string/uigo_name"
            style="@style/edit_text"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_height="50dp"
            android:textColor="@android:color/black"
            />

        <LinearLayout
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/tvUnitOrient"
                style="@style/wrap_match"
                android:onClick="orient"
                android:text="@string/vertical"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/tvUnitAdmin"
                style="@style/wrap_match"
                android:onClick="admin"
                android:text="@string/remote_connect_unit_test"
                />

            <Button
                android:id="@+id/tvUnitStop"
                style="@style/wrap_match"
                android:text="@string/stop"
                android:onClick="stop"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/tvUnitIP"
                android:text="192.168.0.1:"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/edit_text"
                android:onClick="ip"
                android:ellipsize="middle"
                android:gravity="center"
                />

            <EditText
                android:id="@+id/etUnitPort"
                android:hint="8080"
                android:inputType="number"
                android:maxLength="5"
                android:minEms="2"
                android:digits="1234567890"
                style="@style/wrap_match"
                android:gravity="left|center_vertical"
                android:enabled="true"
                android:textSize="16sp"
                />

            <ProgressBar
                android:id="@+id/pbUnit"
                style="@style/wrap_match"/>

            <Button
                android:id="@+id/tvUnitStart"
                style="@style/wrap_match"
                android:text="@string/start"
                android:onClick="onClickStart"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />

        <LinearLayout
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/status_bar_"
                style="@style/name_"
                />

            <EditText
                android:id="@+id/etUIStatusHeight"
                android:hint="30"
                android:inputType="number"
                style="@style/edit_text"
                />

            <Button
                android:id="@+id/tvUIStatusUnit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="dp"
                android:onClick="changeStatusUnit"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/tvUIStatusShow"
                style="@style/wrap_match"
                android:text="@string/hiding"
                android:onClick="showStatus"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />

        <LinearLayout
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"

            >

            <TextView
                android:text="@string/platform_proxy_"
                style="@style/name_"
                />

            <EditText
                android:id="@+id/etUnitProxy"
                android:hint="http://apijson.cn:9090"
                android:inputType="textUri"
                style="@style/edit_text"
                />

            <ProgressBar
                android:id="@+id/pbUnitProxy"
                style="@style/wrap_match"/>

            <Button
                android:id="@+id/tvUnitProxy"
                style="@style/wrap_match"
                android:text="@string/start"
                android:onClick="switchProxy"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />

        <LinearLayout
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"

            >

            <TextView
                android:text="@string/platform_account_"
                style="@style/name_"
                />

            <EditText
                android:id="@+id/etUIAccount"
                android:hint="13000082001"
                style="@style/edit_text"
                />

            <ProgressBar
                android:id="@+id/pbUISignIn"
                style="@style/wrap_match"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <Button
                android:id="@+id/tvUISignIn"
                style="@style/wrap_match"
                android:text="@string/sign_in"
                android:onClick="signIn"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />

        <LinearLayout
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/platform_password_"
                style="@style/name_"
                />

            <EditText
                android:id="@+id/etUIPassword"
                android:hint="123456"
                android:inputType="textPassword"
                style="@style/edit_text"
                />

            <ProgressBar
                android:id="@+id/pbUISignUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <Button
                android:id="@+id/tvUISignUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:onClick="signUp"
                />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />

        <LinearLayout
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/nav_bar_"
                style="@style/name_"
                />

            <EditText
                android:id="@+id/etUINavHeight"
                android:hint="50"
                android:inputType="number"
                style="@style/edit_text"
                />

            <Button
                android:id="@+id/tvUINavUnit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="dp"
                android:onClick="changeNavUnit"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/tvUINavShow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/hiding"
                android:onClick="showNav"
                />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        />

    <LinearLayout
        android:layout_height="45dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/tvUIRemote"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="toRemote"
            android:text="@string/remote"
            />

        <Button
            android:id="@+id/tvUILocal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="toLocal"
            android:layout_weight="1"
            android:text="@string/local"
            />

        <Button
            android:id="@+id/tvUIRecord"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/record"
            android:onClick="record"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#1000"
            >

            <TextView
                android:id="@+id/tvUnitRequest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="top|left"
                android:hint="request"
                android:textSize="14sp"
                android:textIsSelectable="true"
                android:textColor="@android:color/white"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/tvUnitResponse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_weight="2"
                android:background="@null"
                android:gravity="top|left"
                android:hint="response"
                android:textIsSelectable="true"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>