<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uigo.x.UIAutoListActivity"
    style="@style/match_match"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="50dp"
    >

    <LinearLayout
        style="@style/match_wrap"
        android:orientation="vertical"
        android:id="@+id/llUIAutoListFilter"
        >

        <LinearLayout
            style="@style/match_wrap"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <EditText
                android:id="@+id/etUIAutoListAppName"
                style="@style/select_name"
                android:layout_height="45dp"
                android:layout_width="wrap_content"
                android:minWidth="60dp"
                android:padding="0dp"
                android:background="@null"
                android:hint="@string/app_name_"
                android:text="UIGOX"
                android:enabled="true"
                android:gravity="left|center_vertical"
                android:maxLines="1"
                />

            <CheckBox
                android:id="@+id/cbUIAutoListAppName"
                style="@style/wrap_match"
                android:layout_height="45dp"
                android:text="UIGOX"
                android:layout_margin="2dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:text=": "
                />

            <EditText
                android:id="@+id/etUIAutoListProject"
                style="@style/select_name"
                android:layout_height="45dp"
                android:layout_width="wrap_content"
                android:minWidth="60dp"
                android:padding="0dp"
                android:background="@null"
                android:hint="@string/project_name"
                android:text="uigox.demo"
                android:enabled="true"
                android:gravity="left|center_vertical"
                android:maxLines="1"
                />

            <CheckBox
                android:id="@+id/cbUIAutoListProject"
                style="@style/wrap_match"
                android:layout_height="45dp"
                android:text="uigox.demo"
                android:layout_margin="2dp"
                android:visibility="gone"
                android:checked="true"
                />

            <TextView
                android:id="@+id/tvUIAutoListCompare"
                android:layout_width="24dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="=="
                />

            <CheckBox
                android:id="@+id/cbUIAutoListVersion"
                style="@style/wrap_wrap"
                android:layout_height="45dp"
                android:text="1.2.3(11)"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/match_wrap"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <CheckBox
                android:id="@+id/cbUIAutoListDevice"
                style="@style/wrap_wrap"
                android:text="Xiaomi 12 Pro"
                />

            <TextView
                android:id="@+id/tvUIAutoListPixelCompare"
                android:layout_width="24dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="=="
                />

            <CheckBox
                android:id="@+id/cbUIAutoListPixel"
                style="@style/wrap_wrap"
                android:text="3200X1440"
                />

            <TextView
                android:id="@+id/tvUIAutoListSysCompare"
                android:layout_width="24dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="=="
                />

            <CheckBox
                android:id="@+id/cbUIAutoListSystem"
                style="@style/wrap_wrap"
                android:text="Android 12"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/cbUIAutoListAccount"
                android:text="@string/app_account_"
                style="@style/name_"
                />

            <EditText
                android:id="@+id/etUIAutoListAccount"
                style="@style/edit_text"
                />

            <EditText
                android:id="@+id/etUIAutoListAccountName"
                style="@style/edit_text"
                android:layout_weight="1.1"
                />

            <ProgressBar
                android:id="@+id/pbUIAutoListSignIn"
                style="@style/wrap_match"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <Button
                android:id="@+id/tvUIAutoListSignIn"
                style="@style/wrap_match"
                android:text="@string/sign_in"
                android:visibility="gone"
                tools:visibility="visible"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/cbUIAutoListPassword"
                android:text="@string/app_password_"
                style="@style/name_"
                />

            <EditText
                android:id="@+id/etUIAutoListPassword"
                android:inputType="textPassword"
                style="@style/edit_text"
                />

            <CheckBox
                android:id="@+id/cbUIAutoListID"
                android:text="@string/id_"
                style="@style/name_"
                />

            <EditText
                android:id="@+id/etUIAutoListID"
                style="@style/edit_text"
                />

            <ProgressBar
                android:id="@+id/pbUIAutoListSignUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <Button
                android:id="@+id/tvUIAutoListSignUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:visibility="gone"
                tools:visibility="visible"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        >

        <EditText
            android:id="@+id/etUIAutoListName"
            style="@style/select_name"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:hint="@string/pls_input_name_here"
            android:enabled="true"
            android:gravity="left|center_vertical"
            android:layout_weight="1"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/tvUIAutoListCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/0"
            android:padding="4dp"
            />

        <CheckBox
            android:id="@+id/cbUIAutoListDisable"
            style="@style/wrap_wrap"
            android:layout_height="45dp"
            android:text="@string/disable"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white" />

    <ListView
        android:id="@+id/lvUIAutoList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:listitem="@android:layout/simple_list_item_1"
        />

    <LinearLayout
        android:id="@+id/llUIAutoListBar"
        style="@style/match_wrap"
        android:layout_height="45dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnUIAutoListReplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:gravity="center"
            android:text="@string/replay"
            android:onClick="replay"
            />

        <ProgressBar
            android:id="@+id/pbUIAutoList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />

        <EditText
            android:id="@+id/etUIAutoListUrl"
            style="@style/select_name"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:padding="0dp"
            android:text="http://apijson.cn:9090/"
            android:maxLines="1"
            />

        <Button
            android:id="@+id/btnUIAutoListGet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:gravity="center"
            android:text="get"
            android:onClick="onClickSend"
            />
    </LinearLayout>

</LinearLayout>
